workloads/litmus-chaos/production-litmuschaos.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: production-litmuschaos
  name: production-litmuschaos
  namespace: litmuschaos
  annotations:
    fluxcd.io/automated: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: production-litmuschaos
  template:
    metadata:
      labels:
        app: production-litmuschaos
    spec:
      containers:
      - name: production-litmuschaos
        image: litmuschaos/www-litmuschaos-io:cabc70
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always
      imagePullSecrets:
      - name: mayadatasecret2
