workloads/litmus-chaos/staging-litmuschaos-backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stage-litmuschaos-backend
  name: stage-litmuschaos-backend
  namespace: litmuschaos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stage-litmuschaos-backend
  template:
    metadata:
      labels:
        app: stage-litmuschaos-backend
    spec:
      containers:
      - name: stage-litmuschaos-backend
        image: inyee/test:nodejs-github
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
            protocol: TCP
      restartPolicy: Always
