workloads/litmus-chaos/staging-litmuschaos.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stage-litmuschaos
  name: stage-litmuschaos
  namespace: litmuschaos
  annotations:
    fluxcd.io/automated: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stage-litmuschaos
  template:
    metadata:
      labels:
        app: stage-litmuschaos
    spec:
      containers:
      - name: stage-litmuschaos
        image: litmuschaos/www-staging-litmuschaos-io:staging-195ecf
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always
      imagePullSecrets:
      - name: mayadatasecret2
