workloads/litmus-chaos/staging-litmuschaos-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stage-litmuschaos
  name: stage-litmuschaos-service
  namespace: litmuschaos
spec:
  ports:
  - name: stage-litmuschaos
    port: 80
    protocol: TCP
    targetPort: 80
  type: LoadBalancer
  selector:
    app: stage-litmuschaos
