workloads/litmus-chaos/litmuschaos-ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-litmus-website-cluster
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/tls-acme: "true"
    fluxcd.io/automated: "true"
    nginx.org/server-snippets: "gzip on;"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: litmuschaos-ingress
  namespace: litmuschaos
spec:
  rules:
  - host: litmuschaos.io
    http:
      paths:
      - backend:
          serviceName: production-litmuschaos-service
          servicePort: 80
        path: "/(.*)"
      - backend:
          serviceName: echoheaders
          servicePort: 80
        path: "/echo/(.*)"
  tls:
  - hosts:
    - litmuschaos.io
    secretName: litmuschaos-secrets-prod
