workloads/litmus-chaos/litmuschaos-staging-ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-maya-cluster
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/server-snippets: "gzip on;"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
        more_set_headers "X-Robots-Tag:noindex, nofollow, nosnippet, noarchive";    
  name: litmuschaos-ingress-staging
  namespace: litmuschaos-website
spec:
  rules:
  - host: staging.litmuschaos.io
    http:
      paths:
      - backend:
          serviceName: stage-litmuschaos-service
          servicePort: 80
        path: "/"
      - backend:
          serviceName: echoheaders
          servicePort: 80
        path: "/echo/"
  tls:
  - hosts:
    - staging.litmuschaos.io
    secretName: litmuschaos-secrets-staging
